tests/fails/multiple_data.rs
use shakespeare::actor;

#[actor]
mod actor {
	struct A {}
	enum B {
		Foo,
	}
	enum C {
		Bar,
	}
}

fn main() {}
